src/antlr/SolParser.js
// Generated from SolParser.g4 by ANTLR 4.7.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var SolParserListener = require('./SolParserListener').SolParserListener;
var SolParserVisitor = require('./SolParserVisitor').SolParserVisitor;

var grammarFileName = "SolParser.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, null, null, null, null, null, null, null, "';'", 
                     null, null, "'$${'", "'${'", "'import'", null, null, 
                     null, null, null, "'if'", "'elif'", "'else'", "'endif'", 
                     "'for'", "'done'", "'in'", "'('", "')'", "','" ];

var symbolicNames = [ null, "PP_LINE_BEGIN", "PP_BLOCK_BEGIN", "BLOCK_COMMENT", 
                      "LINE_COMMENT", "STRING_LITERAL", "NUMBER_LITERAL", 
                      "BOOLEAN_LITERAL", "SEMICOLON", "WS", "EOL", "BEGIN_EVAL_MACRO_EXPRESSION", 
                      "BEGIN_EXPAND_MACRO_EXPRESSION", "IMPORT_KW", "PRAGMA_VERSION", 
                      "IDENTIFIER", "WORD", "DEF_KW", "UNDEF_KW", "IF_KW", 
                      "ELIF_KW", "ELSE_KW", "ENDIF_KW", "FOR_KW", "DONE_KW", 
                      "IN_KW", "LPAREN", "RPAREN", "COMMA", "PP_CONT", "PP_END", 
                      "LEAVE_EVAL_MACRO_EXPRESSION", "EVAL_MACRO_EXPRESSION", 
                      "LEAVE_EXPAND_MACRO_EXPRESSION", "EXPAND_MACRO_EXPRESSION" ];

var ruleNames =  [ "sourceUnit", "anything", "code", "literal", "blockComment", 
                   "lineComment", "whitespace", "lineBreak", "pragmaVersion", 
                   "nakedImportStatement", "importStatement", "macroExpansion", 
                   "macroEvaluation", "directive", "nakedDefineDirective", 
                   "defineDirective", "defineMacroDirective", "undefineDirective", 
                   "functionSpec", "functionArgs", "directivePayload", "blockContent", 
                   "ifBlock", "elifBlock", "elseBlock", "ifDirective", "elseDirective", 
                   "elifDirective", "endifDirective", "forBlock", "forDirective", 
                   "doneDirective", "endDirective" ];

function SolParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

SolParser.prototype = Object.create(antlr4.Parser.prototype);
SolParser.prototype.constructor = SolParser;

Object.defineProperty(SolParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

SolParser.EOF = antlr4.Token.EOF;
SolParser.PP_LINE_BEGIN = 1;
SolParser.PP_BLOCK_BEGIN = 2;
SolParser.BLOCK_COMMENT = 3;
SolParser.LINE_COMMENT = 4;
SolParser.STRING_LITERAL = 5;
SolParser.NUMBER_LITERAL = 6;
SolParser.BOOLEAN_LITERAL = 7;
SolParser.SEMICOLON = 8;
SolParser.WS = 9;
SolParser.EOL = 10;
SolParser.BEGIN_EVAL_MACRO_EXPRESSION = 11;
SolParser.BEGIN_EXPAND_MACRO_EXPRESSION = 12;
SolParser.IMPORT_KW = 13;
SolParser.PRAGMA_VERSION = 14;
SolParser.IDENTIFIER = 15;
SolParser.WORD = 16;
SolParser.DEF_KW = 17;
SolParser.UNDEF_KW = 18;
SolParser.IF_KW = 19;
SolParser.ELIF_KW = 20;
SolParser.ELSE_KW = 21;
SolParser.ENDIF_KW = 22;
SolParser.FOR_KW = 23;
SolParser.DONE_KW = 24;
SolParser.IN_KW = 25;
SolParser.LPAREN = 26;
SolParser.RPAREN = 27;
SolParser.COMMA = 28;
SolParser.PP_CONT = 29;
SolParser.PP_END = 30;
SolParser.LEAVE_EVAL_MACRO_EXPRESSION = 31;
SolParser.EVAL_MACRO_EXPRESSION = 32;
SolParser.LEAVE_EXPAND_MACRO_EXPRESSION = 33;
SolParser.EXPAND_MACRO_EXPRESSION = 34;

SolParser.RULE_sourceUnit = 0;
SolParser.RULE_anything = 1;
SolParser.RULE_code = 2;
SolParser.RULE_literal = 3;
SolParser.RULE_blockComment = 4;
SolParser.RULE_lineComment = 5;
SolParser.RULE_whitespace = 6;
SolParser.RULE_lineBreak = 7;
SolParser.RULE_pragmaVersion = 8;
SolParser.RULE_nakedImportStatement = 9;
SolParser.RULE_importStatement = 10;
SolParser.RULE_macroExpansion = 11;
SolParser.RULE_macroEvaluation = 12;
SolParser.RULE_directive = 13;
SolParser.RULE_nakedDefineDirective = 14;
SolParser.RULE_defineDirective = 15;
SolParser.RULE_defineMacroDirective = 16;
SolParser.RULE_undefineDirective = 17;
SolParser.RULE_functionSpec = 18;
SolParser.RULE_functionArgs = 19;
SolParser.RULE_directivePayload = 20;
SolParser.RULE_blockContent = 21;
SolParser.RULE_ifBlock = 22;
SolParser.RULE_elifBlock = 23;
SolParser.RULE_elseBlock = 24;
SolParser.RULE_ifDirective = 25;
SolParser.RULE_elseDirective = 26;
SolParser.RULE_elifDirective = 27;
SolParser.RULE_endifDirective = 28;
SolParser.RULE_forBlock = 29;
SolParser.RULE_forDirective = 30;
SolParser.RULE_doneDirective = 31;
SolParser.RULE_endDirective = 32;

function SourceUnitContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SolParser.RULE_sourceUnit;
    return this;
}

SourceUnitContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SourceUnitContext.prototype.constructor = SourceUnitContext;

SourceUnitContext.prototype.EOF = function() {
    return this.getToken(SolParser.EOF, 0);
};

SourceUnitContext.prototype.anything = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(AnythingContext);
    } else {
        return this.getTypedRuleContext(AnythingContext,i);
    }
};

SourceUnitContext.prototype.enterRule = function(listener) {
    if(listener instanceof SolParserListener ) {
        listener.enterSourceUnit(this);
	}
};

SourceUnitContext.prototype.exitRule = function(listener) {
    if(listener instanceof SolParserListener ) {
        listener.exitSourceUnit(this);
	}
};

SourceUnitContext.prototype.accept = function(visitor) {
    if ( visitor instanceof SolParserVisitor ) {
        return visitor.visitSourceUnit(this);
    } else {
        return visitor.visitChildren(this);
    }
};




SolParser.SourceUnitContext = SourceUnitContext;

SolParser.prototype.sourceUnit = function() {

    var localctx = new SourceUnitContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, SolParser.RULE_sourceUnit);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 69;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << SolParser.BLOCK_COMMENT) | (1 << SolParser.LINE_COMMENT) | (1 << SolParser.STRING_LITERAL) | (1 << SolParser.NUMBER_LITERAL) | (1 << SolParser.BOOLEAN_LITERAL) | (1 << SolParser.SEMICOLON) | (1 << SolParser.WS) | (1 << SolParser.EOL) | (1 << SolParser.BEGIN_EVAL_MACRO_EXPRESSION) | (1 << SolParser.BEGIN_EXPAND_MACRO_EXPRESSION) | (1 << SolParser.IMPORT_KW) | (1 << SolParser.PRAGMA_VERSION) | (1 << SolParser.IDENTIFIER) | (1 << SolParser.WORD) | (1 << SolParser.DEF_KW) | (1 << SolParser.UNDEF_KW) | (1 << SolParser.IF_KW) | (1 << SolParser.FOR_KW))) !== 0)) {
            this.state = 66;
            this.anything();
            this.state = 71;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 72;
        this.match(SolParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function AnythingContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SolParser.RULE_anything;
    return this;
}

AnythingContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
AnythingContext.prototype.constructor = AnythingContext;

AnythingContext.prototype.directive = function() {
    return this.getTypedRuleContext(DirectiveContext,0);
};

AnythingContext.prototype.code = function() {
    return this.getTypedRuleContext(CodeContext,0);
};

AnythingContext.prototype.enterRule = function(listener) {
    if(listener instanceof SolParserListener ) {
        listener.enterAnything(this);
	}
};

AnythingContext.prototype.exitRule = function(listener) {
    if(listener instanceof SolParserListener ) {
        listener.exitAnything(this);
	}
};

AnythingContext.prototype.accept = function(visitor) {
    if ( visitor instanceof SolParserVisitor ) {
        return visitor.visitAnything(this);
    } else {
        return visitor.visitChildren(this);
    }
};




SolParser.AnythingContext = AnythingContext;

SolParser.prototype.anything = function() {

    var localctx = new AnythingContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, SolParser.RULE_anything);
    try {
        this.state = 76;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case SolParser.DEF_KW:
        case SolParser.UNDEF_KW:
        case SolParser.IF_KW:
        case SolParser.FOR_KW:
            this.enterOuterAlt(localctx, 1);
            this.state = 74;
            this.directive();
            break;
        case SolParser.BLOCK_COMMENT:
        case SolParser.LINE_COMMENT:
        case SolParser.STRING_LITERAL:
        case SolParser.NUMBER_LITERAL:
        case SolParser.BOOLEAN_LITERAL:
        case SolParser.SEMICOLON:
        case SolParser.WS:
        case SolParser.EOL:
        case SolParser.BEGIN_EVAL_MACRO_EXPRESSION:
        case SolParser.BEGIN_EXPAND_MACRO_EXPRESSION:
        case SolParser.IMPORT_KW:
        case SolParser.PRAGMA_VERSION:
        case SolParser.IDENTIFIER:
        case SolParser.WORD:
            this.enterOuterAlt(localctx, 2);
            this.state = 75;
            this.code();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function CodeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SolParser.RULE_code;
    return this;
}

CodeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
CodeContext.prototype.constructor = CodeContext;

CodeContext.prototype.blockComment = function() {
    return this.getTypedRuleContext(BlockCommentContext,0);
};

CodeContext.prototype.lineComment = function() {
    return this.getTypedRuleContext(LineCommentContext,0);
};

CodeContext.prototype.nakedImportStatement = function() {
    return this.getTypedRuleContext(NakedImportStatementContext,0);
};

CodeContext.prototype.importStatement = function() {
    return this.getTypedRuleContext(ImportStatementContext,0);
};

CodeContext.prototype.pragmaVersion = function() {
    return this.getTypedRuleContext(PragmaVersionContext,0);
};

CodeContext.prototype.macroExpansion = function() {
    return this.getTypedRuleContext(MacroExpansionContext,0);
};

CodeContext.prototype.macroEvaluation = function() {
    return this.getTypedRuleContext(MacroEvaluationContext,0);
};

CodeContext.prototype.literal = function() {
    return this.getTypedRuleContext(LiteralContext,0);
};

CodeContext.prototype.IDENTIFIER = function() {
    return this.getToken(SolParser.IDENTIFIER, 0);
};

CodeContext.prototype.WORD = function() {
    return this.getToken(SolParser.WORD, 0);
};

CodeContext.prototype.whitespace = function() {
    return this.getTypedRuleContext(WhitespaceContext,0);
};

CodeContext.prototype.lineBreak = function() {
    return this.getTypedRuleContext(LineBreakContext,0);
};

CodeContext.prototype.SEMICOLON = function() {
    return this.getToken(SolParser.SEMICOLON, 0);
};

CodeContext.prototype.enterRule = function(listener) {
    if(listener instanceof SolParserListener ) {
        listener.enterCode(this);
	}
};

CodeContext.prototype.exitRule = function(listener) {
    if(listener instanceof SolParserListener ) {
        listener.exitCode(this);
	}
};

CodeContext.prototype.accept = function(visitor) {
    if ( visitor instanceof SolParserVisitor ) {
        return visitor.visitCode(this);
    } else {
        return visitor.visitChildren(this);
    }
};




SolParser.CodeContext = CodeContext;

SolParser.prototype.code = function() {

    var localctx = new CodeContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, SolParser.RULE_code);
    try {
        this.state = 91;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 78;
            this.blockComment();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 79;
            this.lineComment();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 80;
            this.nakedImportStatement();
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 81;
            this.importStatement();
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 82;
            this.pragmaVersion();
            break;

        case 6:
            this.enterOuterAlt(localctx, 6);
            this.state = 83;
            this.macroExpansion();
            break;

        case 7:
            this.enterOuterAlt(localctx, 7);
            this.state = 84;
            this.macroEvaluation();
            break;

        case 8:
            this.enterOuterAlt(localctx, 8);
            this.state = 85;
            this.literal();
            break;

        case 9:
            this.enterOuterAlt(localctx, 9);
            this.state = 86;
            this.match(SolParser.IDENTIFIER);
            break;

        case 10:
            this.enterOuterAlt(localctx, 10);
            this.state = 87;
            this.match(SolParser.WORD);
            break;

        case 11:
            this.enterOuterAlt(localctx, 11);
            this.state = 88;
            this.whitespace();
            break;

        case 12:
            this.enterOuterAlt(localctx, 12);
            this.state = 89;
            this.lineBreak();
            break;

        case 13:
            this.enterOuterAlt(localctx, 13);
            this.state = 90;
            this.match(SolParser.SEMICOLON);
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function LiteralContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SolParser.RULE_literal;
    return this;
}

LiteralContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
LiteralContext.prototype.constructor = LiteralContext;

LiteralContext.prototype.STRING_LITERAL = function() {
    return this.getToken(SolParser.STRING_LITERAL, 0);
};

LiteralContext.prototype.NUMBER_LITERAL = function() {
    return this.getToken(SolParser.NUMBER_LITERAL, 0);
};

LiteralContext.prototype.BOOLEAN_LITERAL = function() {
    return this.getToken(SolParser.BOOLEAN_LITERAL, 0);
};

LiteralContext.prototype.enterRule = function(listener) {
    if(listener instanceof SolParserListener ) {
        listener.enterLiteral(this);
	}
};

LiteralContext.prototype.exitRule = function(listener) {
    if(listener instanceof SolParserListener ) {
        listener.exitLiteral(this);
	}
};

LiteralContext.prototype.accept = function(visitor) {
    if ( visitor instanceof SolParserVisitor ) {
        return visitor.visitLiteral(this);
    } else {
        return visitor.visitChildren(this);
    }
};




SolParser.LiteralContext = LiteralContext;

SolParser.prototype.literal = function() {

    var localctx = new LiteralContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, SolParser.RULE_literal);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 93;
        _la = this._input.LA(1);
        if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << SolParser.STRING_LITERAL) | (1 << SolParser.NUMBER_LITERAL) | (1 << SolParser.BOOLEAN_LITERAL))) !== 0))) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function BlockCommentContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SolParser.RULE_blockComment;
    return this;
}

BlockCommentContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BlockCommentContext.prototype.constructor = BlockCommentContext;

BlockCommentContext.prototype.BLOCK_COMMENT = function() {
    return this.getToken(SolParser.BLOCK_COMMENT, 0);
};

BlockCommentContext.prototype.enterRule = function(listener) {
    if(listener instanceof SolParserListener ) {
        listener.enterBlockComment(this);
	}
};

BlockCommentContext.prototype.exitRule = function(listener) {
    if(listener instanceof SolParserListener ) {
        listener.exitBlockComment(this);
	}
};

BlockCommentContext.prototype.accept = function(visitor) {
    if ( visitor instanceof SolParserVisitor ) {
        return visitor.visitBlockComment(this);
    } else {
        return visitor.visitChildren(this);
    }
};




SolParser.BlockCommentContext = BlockCommentContext;

SolParser.prototype.blockComment = function() {

    var localctx = new BlockCommentContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, SolParser.RULE_blockComment);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 95;
        this.match(SolParser.BLOCK_COMMENT);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function LineCommentContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SolParser.RULE_lineComment;
    return this;
}

LineCommentContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
LineCommentContext.prototype.constructor = LineCommentContext;

LineCommentContext.prototype.LINE_COMMENT = function() {
    return this.getToken(SolParser.LINE_COMMENT, 0);
};

LineCommentContext.prototype.enterRule = function(listener) {
    if(listener instanceof SolParserListener ) {
        listener.enterLineComment(this);
	}
};

LineCommentContext.prototype.exitRule = function(listener) {
    if(listener instanceof SolParserListener ) {
        listener.exitLineComment(this);
	}
};

LineCommentContext.prototype.accept = function(visitor) {
    if ( visitor instanceof SolParserVisitor ) {
        return visitor.visitLineComment(this);
    } else {
        return visitor.visitChildren(this);
    }
};




SolParser.LineCommentContext = LineCommentContext;

SolParser.prototype.lineComment = function() {

    var localctx = new LineCommentContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, SolParser.RULE_lineComment);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 97;
        this.match(SolParser.LINE_COMMENT);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function WhitespaceContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SolParser.RULE_whitespace;
    return this;
}

WhitespaceContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
WhitespaceContext.prototype.constructor = WhitespaceContext;

WhitespaceContext.prototype.WS = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(SolParser.WS);
    } else {
        return this.getToken(SolParser.WS, i);
    }
};


WhitespaceContext.prototype.enterRule = function(listener) {
    if(listener instanceof SolParserListener ) {
        listener.enterWhitespace(this);
	}
};

WhitespaceContext.prototype.exitRule = function(listener) {
    if(listener instanceof SolParserListener ) {
        listener.exitWhitespace(this);
	}
};

WhitespaceContext.prototype.accept = function(visitor) {
    if ( visitor instanceof SolParserVisitor ) {
        return visitor.visitWhitespace(this);
    } else {
        return visitor.visitChildren(this);
    }
};




SolParser.WhitespaceContext = WhitespaceContext;

SolParser.prototype.whitespace = function() {

    var localctx = new WhitespaceContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, SolParser.RULE_whitespace);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 100; 
        this._errHandler.sync(this);
        var _alt = 1;
        do {
        	switch (_alt) {
        	case 1:
        		this.state = 99;
        		this.match(SolParser.WS);
        		break;
        	default:
        		throw new antlr4.error.NoViableAltException(this);
        	}
        	this.state = 102; 
        	this._errHandler.sync(this);
        	_alt = this._interp.adaptivePredict(this._input,3, this._ctx);
        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function LineBreakContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SolParser.RULE_lineBreak;
    return this;
}

LineBreakContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
LineBreakContext.prototype.constructor = LineBreakContext;

LineBreakContext.prototype.EOL = function() {
    return this.getToken(SolParser.EOL, 0);
};

LineBreakContext.prototype.enterRule = function(listener) {
    if(listener instanceof SolParserListener ) {
        listener.enterLineBreak(this);
	}
};

LineBreakContext.prototype.exitRule = function(listener) {
    if(listener instanceof SolParserListener ) {
        listener.exitLineBreak(this);
	}
};

LineBreakContext.prototype.accept = function(visitor) {
    if ( visitor instanceof SolParserVisitor ) {
        return visitor.visitLineBreak(this);
    } else {
        return visitor.visitChildren(this);
    }
};




SolParser.LineBreakContext = LineBreakContext;

SolParser.prototype.lineBreak = function() {

    var localctx = new LineBreakContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, SolParser.RULE_lineBreak);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 104;
        this.match(SolParser.EOL);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function PragmaVersionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SolParser.RULE_pragmaVersion;
    this.content = null; // Token
    return this;
}

PragmaVersionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PragmaVersionContext.prototype.constructor = PragmaVersionContext;

PragmaVersionContext.prototype.PRAGMA_VERSION = function() {
    return this.getToken(SolParser.PRAGMA_VERSION, 0);
};

PragmaVersionContext.prototype.enterRule = function(listener) {
    if(listener instanceof SolParserListener ) {
        listener.enterPragmaVersion(this);
	}
};

PragmaVersionContext.prototype.exitRule = function(listener) {
    if(listener instanceof SolParserListener ) {
        listener.exitPragmaVersion(this);
	}
};

PragmaVersionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof SolParserVisitor ) {
        return visitor.visitPragmaVersion(this);
    } else {
        return visitor.visitChildren(this);
    }
};




SolParser.PragmaVersionContext = PragmaVersionContext;

SolParser.prototype.pragmaVersion = function() {

    var localctx = new PragmaVersionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, SolParser.RULE_pragmaVersion);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 106;
        localctx.content = this.match(SolParser.PRAGMA_VERSION);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function NakedImportStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SolParser.RULE_nakedImportStatement;
    this.path = null; // Token
    return this;
}

NakedImportStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
NakedImportStatementContext.prototype.constructor = NakedImportStatementContext;

NakedImportStatementContext.prototype.IMPORT_KW = function() {
    return this.getToken(SolParser.IMPORT_KW, 0);
};

NakedImportStatementContext.prototype.WS = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(SolParser.WS);
    } else {
        return this.getToken(SolParser.WS, i);
    }
};


NakedImportStatementContext.prototype.SEMICOLON = function() {
    return this.getToken(SolParser.SEMICOLON, 0);
};

NakedImportStatementContext.prototype.STRING_LITERAL = function() {
    return this.getToken(SolParser.STRING_LITERAL, 0);
};

NakedImportStatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof SolParserListener ) {
        listener.enterNakedImportStatement(this);
	}
};

NakedImportStatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof SolParserListener ) {
        listener.exitNakedImportStatement(this);
	}
};

NakedImportStatementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof SolParserVisitor ) {
        return visitor.visitNakedImportStatement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




SolParser.NakedImportStatementContext = NakedImportStatementContext;

SolParser.prototype.nakedImportStatement = function() {

    var localctx = new NakedImportStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 18, SolParser.RULE_nakedImportStatement);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 108;
        this.match(SolParser.IMPORT_KW);
        this.state = 109;
        this.match(SolParser.WS);
        this.state = 110;
        localctx.path = this.match(SolParser.STRING_LITERAL);
        this.state = 114;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===SolParser.WS) {
            this.state = 111;
            this.match(SolParser.WS);
            this.state = 116;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 117;
        this.match(SolParser.SEMICOLON);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};
